# AurumTabula

./: .dockerignore  .env  .flyignore  .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_FIX.md  fly.toml
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/entities/: customer.rs  mod.rs  transaction.rs
src/app/helpers/: date.rs
src/app/models/: customer_select.rs  mod.rs
src/app/routes/: transactions.rs
src/app/services/: customer_service.rs
src/entities/: customer.rs  transaction.rs
src/utilities/: mod.rs
templates/: add_transaction.html
tests/: transaction_tests.rs
