[package]
name = "aurumtabula"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-persian = "0.1.2"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls", "macros", "bigdecimal"] }
dotenv = "0.15.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
bigdecimal = { version = "0.4.9", features = ["serde"] }
axum = { version = "0.8.6", features = ["http1", "http2", "json", "macros", "ws"] }
askama = { version = "0.14.0" }
tower-http = { version = "0.6.6", features = ["fs"] }

